src/newUi.scss
/* ... */
.features-page-container {
  display: flex;
  flex-direction: column;
  gap: 24px;
  background-color: var(--secondary-color);
  margin: 16px 0;
}

.span-red-tag {
  background-color: var(--span-red-background);
  border: 1px solid var(--span-red-border);
}

.span-green-tag {
  background-color: var(--span-green-background);
  border: 1px solid var(--span-green-border);
}

.table-address {
  table-layout: inherit;
}

.summary-main-info {
  margin-top: 24px;
  background-color: var(--secondary-color);
  border: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding: 24px;
  font-size: 14px;
  border-radius: 8px;
}

.alter-background {
  background-color: var(--alter-background-color);
  border: 1px solid var(--alter-border-color);
}

.summary-main-info-container {
  display: flex;
  flex-direction: row;
  width: 480px;
  align-items: center;
}

.select-token-address {
  border: 1px solid var(--alter-border-color);
  background-color: var(--alter-background-color);
  color: var(--normal-text-color);
  border-radius: 8px;
  padding: 8px 9px;
}

.select-token-address:focus {
  background-color: var(--background-color);
}

.custom-select-container {
  position: relative;
}

.custom-select {
  width: 180px;
  border: 1px solid var(--alter-border-color);
  background-color: var(--dropdown-b);
  color: var(--normal-text-color);
  border-radius: 8px;
  padding: 8px 9px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  cursor: pointer;
}

.custom-select-options {
  position: absolute;
  background-color: var(--input-background);
  width: 100%;
  border-radius: 8px;
}

.custom-select-options ul {
  list-style: none;
  padding: 0;
  margin: 0;
  margin: 12px 0;
}

.custom-select-options ul li {
  padding: 6px 0;
  font-family: 'Mona Sans', sans-serif;
  color: var(--bold-text-color);
  font-size: 16px;
  font-weight: 500;
  line-height: 20px;
  text-align: center;
}

.drop-arrow-color {
  color: var(--bold-text-color);
  cursor: pointer;
}

.custom-select-options ul li:hover {
  background-color: var(--secondary-color);
}

.address-container-title {
  width: 100%;
  max-width: 120px;
  margin-right: 16px;
  color: var(--bold-text-color);
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 700;
  line-height: 16px;
  letter-spacing: 0.03em;
  text-align: left;
}

.tr-features-details {
  width: 100%;
  border: none !important;
}

.summary-balance-info-container {
  word-break: break-word;
  font-family: 'San Francisco Pro', sans-serif;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: 0.03em;
  text-align: left;

  & .address-container-description {
    width: 100%;
  }
}

.token-option {
  background-color: var(--input-background);
}

.summary-container-title-purple {
  color: var(--purple-text);
}

.tx-id-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 14px;
  gap: 16px;
}

.tx-title-purple {
  color: var(--purple-text);
  font-family: 'Mona Sans';
  text-transform: uppercase;
  font-weight: 700;
  line-height: 16px;
  letter-spacing: 0.03em;
  text-align: left;
  white-space: nowrap;
}

.tx-id-top {
  font-family: 'San Francisco Pro', sans-serif;
  white-space: wrap;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.03em;
  word-break: break-word;
  text-align: left;
}

.summary-balance-info {
  display: flex;
  flex-direction: column;
  gap: 24px;
  background-color: var(--secondary-color);
  border: 1px solid var(--border-color);
  border-radius: 8px;
  padding: 24px;
  margin: 16px 0;
}

.summary-balance-info-container {
  display: flex;
  flex-direction: row;
  align-items: baseline;
}

.container-big-links {
  word-break: break-all;

  a {
    color: #8c46ff;
  }
}

@media ((width <= 1100px)) {
  nav {
    align-items: baseline;

    .mobile-sidebar-icon {
      cursor: pointer;
    }

    .hide-network-mobile {
      display: flex;
      margin: 20px 0 0;
      gap: 10px;
      justify-content: space-between;
      align-items: center;
      background-color: transparent;
      border: none;
    }

    .hide-logo-container-mobile {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      align-items: flex-start;
    }

    .hide-tabs {
      display: none;
    }

    .mobile-tabs {
      display: flex;
      gap: 32px;
      color: var(--bold-text-color);
      align-items: baseline;
      white-space: nowrap;

      .mobile-search-icon {
        cursor: pointer;
        transition: width 0.3s ease, padding 0.3s ease;
      }

      .mobile-search-input {
        transition: width 0.3s ease, padding 0.3s ease;
        color: var(--bold-text-color) !important;
        background-color: var(--input-background) !important;
        padding-left: 35px;
        background-size: 16px;
      }

      .navigation-search-input:focus {
        outline: none;
        box-shadow: none;
        border-color: transparent;
      }

      .mobile-search-input::placeholder {
        color: var(--normal-text-color);
        opacity: 1;
      }

      .mobile-search-input.expanded {
        width: 80%;
        padding: 5px;
      }
    }
  }

  .alert-success-container-big {
    flex-direction: column;
    text-align: center;
  }
}

@media screen and (width <= 900px) {
  .footer-container {
    height: auto;
    flex-direction: column;
    padding: 40px 16px 72px;

    .info-container {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      align-items: flex-start;
      gap: 8px;
      margin-bottom: 20px;
    }

    .logo-version-container {
      margin-bottom: 20px;
    }

    .hide-version {
      display: none;
    }
  }

  .new-hathor-alert {
    padding: 4px 8px 4px 8px;
  }
}
/* ... */

